fix nav spacing

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -39,8 +39,8 @@
 }
 
 .collapse {
-  margin-top: 19px;
-  margin-bottom: 19px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .line {
